--- a/Qsort_v2.html
+++ b/Qsort_v2.html
@@ -628,7 +628,7 @@ const sentences = [
 "You are meeting your significant other’s family for the first time.",
 "You and your friend are both interviewing for the same job.",
 "You have been asked to sell something to a vulnerable customer.",
-"Attention Check: Please just place this bin in Bin #6."
+"Attention Check: Please just place this bin in Bin #6.",
 "You want to ask your boss for a raise, but they seem to be in a bad mood.",
 "Your significant other’s parents seem upset about something you said.",
 "You are going into your annual review meeting.",
@@ -683,7 +683,7 @@ const sentences = [
 "You need to get your boss a Secret Santa present.",
 "A family member catches you doing something morally wrong.",
 "A new person is invited into your friend group.",
-"Attention Check: Please just place this bin in Bin #3."
+"Attention Check: Please just place this bin in Bin #3.",
 "Your therapist just canceled their appointment with you last minute.",
 "You just moved in with a new roommate who seems stressed.",
 "Your boss tells you that they may be taking a new job.",
@@ -1488,23 +1488,57 @@ function downloadCSV() {
         csvContent += `${r.timestamp},"${r.question}","${r.whyMotivating || ''}","${r.howToImprove || ''}","${r.powerDynamic || ''}","${r.powerInfluence || ''}","${r.anythingElse || ''}"\n`;
     });
 
-    try {
-        const encodedUri = encodeURI(csvContent);
-        const link = document.createElement("a");
-        link.setAttribute("href", encodedUri);
-        link.setAttribute("download", "qsort_data.csv");
-        document.body.appendChild(link);
-        link.click();
-        document.body.removeChild(link);
+   //============================
+    // //Downloads to local system
+    //============================
+    //try {
+    //    const encodedUri = encodeURI(csvContent);
+    //    const link = document.createElement("a");
+    //    link.setAttribute("href", encodedUri);
+    //    link.setAttribute("download", "qsort_data.csv");
+    //    document.body.appendChild(link);
+    //    link.click();
+    //    document.body.removeChild(link);
+//
+    //    setTimeout(() => { 
+    //        clearLogsFromLocalStorage();
+    //        window.location.href = "https://uoitsocialscience.eu.qualtrics.com/jfe/form/SV_8wCmzDwF4NY0BrE";
+    //    }, 100);
+    //} catch (error) {
+    //    console.error("Error during CSV download:", error);
+    //    console.warn("LocalStorage will not be cleared due to error.");
+    //}
+//}
 
-        setTimeout(() => { 
-            clearLogsFromLocalStorage();
-            window.location.href = "https://uoitsocialscience.eu.qualtrics.com/jfe/form/SV_8wCmzDwF4NY0BrE";
-        }, 100);
-    } catch (error) {
-        console.error("Error during CSV download:", error);
-        console.warn("LocalStorage will not be cleared due to error.");
-    }
+//========================================
+// Save to Google Drive (via PipeDream)
+//========================================
+
+// Create a Blob (binary large object) from the CSV text
+const csvBlob = new Blob([csvContent], { type: "text/csv" });
+
+// Create a FormData object to send the file
+const formData = new FormData();
+formData.append("file", csvBlob, `${subjectID}_qsort.csv`);
+formData.append("subjectID", subjectID);
+
+fetch("https://eoi5xbk2klvg58i.m.pipedream.net", {  // Replace with your PipeDream URL
+        method: "POST",
+        body: formData
+    })
+  .then(response => response.text())
+  .then(data => {
+    console.log('Success:', data);
+
+    // Optionally, clear local storage or navigate after success:
+    clearLogsFromLocalStorage();
+    setTimeout(() => {
+        window.location.href = "https://uoitsocialscience.eu.qualtrics.com/jfe/form/SV_8wCmzDwF4NY0BrE";
+    }, 5000);
+  })
+  .catch((error) => {
+    console.error('Error:', error);
+  });
 }
 
 let cleared = false;
