--- a/Qsort_v2.html
+++ b/Qsort_v2.html
@@ -493,8 +493,9 @@
 </div>
 
 <div id="thank-you-section" style="display: none; text-align: center;">
-    <h3>Thank you for participating in the Q-Sort task!</h3>
-    <p>Your data has been saved. You can now close this window.</p>
+    <p>In a moment you'll be forwarded to a series of questionnaires which should take approximately 15 minutes to complete (and then you're done).</p>
+    <br>
+    <p>Please do not close your browser window at this time</p>
 </div>
 
 <!-- Include SortableJS -->
@@ -1534,7 +1535,7 @@ fetch("https://eoi5xbk2klvg58i.m.pipedream.net", {  // Replace with your PipeDre
     clearLogsFromLocalStorage();
     setTimeout(() => {
         window.location.href = "https://uoitsocialscience.eu.qualtrics.com/jfe/form/SV_8wCmzDwF4NY0BrE";
-    }, 5000);
+    }, 3000);
   })
   .catch((error) => {
     console.error('Error:', error);
